Fix #112604: Add "tag" to the tool tip of asset search

Asset search will also filter tags alongside names, this patch makes the
description consistent with what it actually does.

Pull Request: https://projects.blender.org/blender/blender/pulls/112609