source/blender/makesrna/intern/rna_space.cc
@@ -6860,7 +6860,8 @@ static void rna_def_fileselect_params(BlenderRNA *brna)
 
   prop = RNA_def_property(srna, "filter_search", PROP_STRING, PROP_NONE);
   RNA_def_property_string_sdna(prop, nullptr, "filter_search");
-  RNA_def_property_ui_text(prop, "Name Filter", "Filter by name, supports '*' wildcard");
+  RNA_def_property_ui_text(
+      prop, "Name or Tag Filter", "Filter by name or tag, supports '*' wildcard");
   RNA_def_property_flag(prop, PROP_TEXTEDIT_UPDATE);
   RNA_def_property_update(prop, NC_SPACE | ND_SPACE_FILE_LIST, nullptr);
 
